# xAgentic

./: .gitignore  README.md  start.sh
xAgentic-backend/: .gitignore  main.py  mcp_config.json  pyproject.toml  sample.env
xAgentic-backend/api/: chat.py  mcp.py  plan_executor.py  supervisor.py
xAgentic-backend/cfg/: config.py  setting.py
xAgentic-backend/graph/: base_graph.py  plan_executor_graph.py  supervisor_graph.py
xAgentic-backend/llm_provider/: base.py
xAgentic-backend/mcp_/: client.py  manager.py
xAgentic-backend/memory/: embeddings.py
xAgentic-backend/prompt/: code_prompts.py  plan_executor_prompts.py  supervisor_prompts.py
xAgentic-backend/services/: service_manager.py
xAgentic-backend/tools/: __init__.py  code_tools.py  search_tools.py  time_tools.py
xAgentic-backend/utils/: custom_serializer.py  json_utils.py  langsmith_utils.py  timing_decorator.py  unified_logger.py
xAgentic-frontend/: .gitignore  package-lock.json  package.json  server.js
xAgentic-frontend/public/: fortune.html  index.html
